--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ body{
     width: auto;
     height: auto;
     
-    background-color: rgb(0,0,0,0.8);
+    background-color: blue;
     color: white;
   
     position: fixed;
